--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@preact/signals": "^1.2.3",
     "cannon-es": "^0.20.0",
     "cannon-es-debugger": "^1.0.0",
     "lodash": "^4.17.21",
