--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.19",
     "@preact/signals": "^1.2.3",
     "cannon-es": "^0.20.0",
     "cannon-es-debugger": "^1.0.0",
