--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.19",
     "@preact/signals": "^1.2.3",
+    "alasql": "^4.3.3",
     "cannon-es": "^0.20.0",
     "cannon-es-debugger": "^1.0.0",
     "classname-variants": "^1.5.0",
